# sbom-cyclonedx-mcp

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  README.md  SECURITY.md  acp.json  glama.json  llms.txt  pyproject.toml  server.json  server.py  smithery.yaml  test_server.py
.github/workflows/: ci.yml  release-sigstore.yml  scorecard.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
tests/: test_server.py
