[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbom-cyclonedx-mcp"
readme = "README.md"
version = "1.0.4"
description = "Software Bill of Materials generation + validation in CycloneDX 1.6 and SPDX 2.3 formats. Required by EO 14028 + NIS2 + CRA."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["sbom", "cyclonedx", "spdx", "supply-chain", "slsa", "eo-14028", "nis2", "cra", "mcp", "mcp-server", "model-context-protocol", "ai-governance"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/sbom-cyclonedx-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
sbom-cyclonedx-mcp = "server:main"
